# modpackr

./: Cargo.toml  README.md  shell.nix
.github/workflows/: rust.yml
examples/: testpak.yaml
modpackr-lib/: Cargo.toml
modpackr-lib/src/: errors.rs  forge_mod.rs  lib.rs  manifest.rs  mod.rs  version.rs
src/: main.rs
