[package]
name = "modpackr-lib"
version = "0.1.0"
authors = ["Tristan Daniël Maat <tm@tlater.net>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.4", features = [ "blocking", "json" ] }
serde = { version = "1.0.110", features = [ "derive" ] }
serde_yaml = "0.8.12"
# sha2 = "0.8.1"
snafu = "0.6.8"
